{
    "version": 1,
    "name": "ClickControls",
    "maps": [
        {
            "name": "Pointer",
            "id": "e82b4c60-407b-42c1-b473-3c4a6176c508",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "a1581db8-932b-4d81-9a6a-ffc694d8667c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3dd8ad1c-c31c-4141-b714-6e20b85194ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "733abf9c-f618-46e8-95fa-59d1b6e16abd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68276522-742d-4012-9f90-97264f0d7917",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0cdca08-4178-45f4-8241-f28e93160ad8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}